--- a/base-0.html
+++ b/base-0.html
@@ -7,6 +7,16 @@
     <meta name="description" content="A sample web page without a linked stylesheet file.">
 
     <meta name="author" content="Mary Smith">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159155048-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159155048-1');
+</script>
+
 </head>
 
 
