--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page | EYKO </title>
+    <title>home page | sophie</title>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159155048-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159155048-1');
 </head>
-
-
 <body>
-
-<h1>My first web page.</h1>
-<img src="laptop duo.png">
-
-
+    
 
 </body>
+
+<h1>my first web page.</h1>
+<ing src="laptop.jpg">
+    
 </html>
