--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home page | sophie</title>
-     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <title>home page | EYKO</title>
+       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159155048-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,6 +12,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-159155048-1');
+</script>
 </head>
 <body>
     
