--- a/Portfolio/smoothies/index.html
+++ b/Portfolio/smoothies/index.html
@@ -132,7 +132,7 @@
 				<label for="email-address">Email:</label>
                 <input type="text" id="email-address" name="email-address" placeholder="Your email address" maxlength="80" autocapitalize="none" required>
                 <input type="hidden" name="_subject" id="email-subject" value="Email Signup Form Submission">
-				<button id="btn-submit" type="submit" class="btn-submit">Try it free <i class="fas fa-envelope"></i></button>
+				<button id="btn-submit" type="submit" class="btn-submit">Subscribe <i class="fas fa-envelope"></i></button>
 			</div>
 			<!-- End email sign up form fields -->
 		</form>
