--- a/Portfolio/how-to-set-up-a-website/index.html
+++ b/Portfolio/how-to-set-up-a-website/index.html
@@ -15,7 +15,10 @@
 
 	
 	<!-- Link to stylesheet for Cookie Consent Popup Message -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+	
+	<!-- Link to icons for Font Awesome 5 -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159155048-1"></script>
@@ -169,7 +172,38 @@
 		</div>
 		
 
-	</div>	
+	</div>
+	<!-- Begin HTML footer -->
+
+	<div class="container-footer">
+
+		<div class="item-3">
+
+			<h4>Site Map</h4>
+			<p><i class="fas fa-home fa-fw"></i><a href="../../index.html">Home</a>
+			<p><i class="fas fa-file-alt fa-fw"></i><a href="../Portfolio.html">Portfolio</a>
+			<p><i class="fas fa-lock fa-fw"></i><a href="../../privacy.html">Privacy</a>
+		
+		</div>
+
+		<div class="item-3">
+			<h4>About Me</h4>
+			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
+			
+			<p>I created this sample web page to showcase some of my digital creation skills.</p>
+		</div>
+
+		<div class="item-3">
+			<h4>Contact</h4>
+			<p><i class="fas fa-envelope fa-fw"></i><a href="mailto:eimearkeogh@hotmail.com">Email</a></p>
+			<p><i class="fab fa-github-square fa-fw"></i><a href="https://www.github.com/eimeark2204" target="_blank">GitHub</a></p>
+			<p><i class="fab fa-linkedin fa-fw"></i><a href="https://ie.linkedin.com" target="_blank">Linkedin</a></p>
+		</div>
+		
+	</div>
+	
+	<!-- End HTML footer -->
+		
 	 <!-- JavaScript for Cookie Consent Popup Message -->
 	 <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
 	 <script>
