--- a/Portfolio/web-agency/team.html
+++ b/Portfolio/web-agency/team.html
@@ -85,7 +85,7 @@
 	<div class="container-flexbox bg-pastel-pink">
 		<div class="item-1">
 			<h2>We are here to help</h2>
-			<p>Interested in working together? Have a project you'd like to discuss?<a class="fancy-link" href="contact.html"> Get in touch.</p>
+			<p>Interested in working together? Have a project you'd like to discuss?<a class="fancy-link" href="contact.html"> Get in touch</a>.</p>
 		</div>
 	</div>
 	<!-- End parent flexbox container -->
