--- a/Portfolio/smoothies/index.html
+++ b/Portfolio/smoothies/index.html
@@ -222,16 +222,16 @@
 
 		<div class="item-3">
 			<h4>About Me</h4>
-			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
+			<p>Hi, I'm Eimear Keogh. I'm a web designer and developer.</p>
 			
 			<p>I created this sample web page to showcase some of my digital creation skills.</p>
 		</div>
 
 		<div class="item-3">
 			<h4>Contact</h4>
-			<p><i class="fas fa-envelope fa-fw"></i><a href="mailto:ibat.training@gmail.com">Email</a></p>
-			<p><i class="fab fa-github-square fa-fw"></i><a href="https://www.github.com/ibat-web-dev" target="_blank">GitHub</a></p>
-			<p><i class="fab fa-linkedin fa-fw"></i><a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">Linkedin</a></p>
+			<p><i class="fas fa-envelope fa-fw"></i><a href="mailto:eimeark85@gmail.com">Email</a></p>
+			<p><i class="fab fa-github-square fa-fw"></i><a href="https://www.github.com/eimeark2204" target="_blank">GitHub</a></p>
+			<p><i class="fab fa-linkedin fa-fw"></i><a href="https://ie.linkedin.com/in/eimear-keogh-06a476187/" target="_blank">Linkedin</a></p>
 		</div>
 		
 	</div>
