--- a/Portfolio/smoothies/index.html
+++ b/Portfolio/smoothies/index.html
@@ -95,7 +95,7 @@
 			<a href="../../index.html">Home</a>
 			<a href="../index.html">Portfolio</a>
 			<a href="../../contact/index.html">Contact</a>   
-        <a href="https://www.facebook.com/public/Eimear-Keogh" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.facebook.com/eimear.keogh.7" target="_blank"><i class="fab fa-facebook-square"></i></a>
         </div>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
