--- a/Portfolio/smoothies/index.html
+++ b/Portfolio/smoothies/index.html
@@ -78,7 +78,7 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-            <img src="assets/img/eimear.png" alt="Eimear Keogh web designer, Dublin">
+            <img src="assets/img/eimear.PNG" alt="Eimear Keogh web designer, Dublin">
             <p>Hi, I'm <b>Eimear Keogh</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
