--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <div class="container-flexbox container-hero-block-two-columns unhide-content-under-sticky-menu">
         <div class="item-2 slide-in-left">
             <h1>Welcome to my website</h1>
-            <h2>Hi, I'm <b>Mary Smith</b>. I create digital experiences to promote products, services and events.</h2>
-            <a href="contact/index.html" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
+            <h2>Hi, I'm <b>Eimear Keogh</b>. I create digital experiences to promote products, services and events.</h2>
+            <a href="https://eimeark2204.github.io/Portfolio/smoothies/" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="item-2">
             <img src="assets/img/hero-undraw-home.png" alt="hero image">
