--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="item-2 slide-in-left">
             <h1>Welcome to my website</h1>
             <h2>Hi, I'm <b>Eimear Keogh</b>. I create digital experiences to promote products, services and events.</h2>
-            <a href="https://eimeark2204.github.io/Portfolio/smoothies/" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
+            <a href="https://eimeark2204.github.io/contact/index.html" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="item-2">
             <img src="assets/img/hero-undraw-home.png" alt="hero image">
@@ -138,10 +138,10 @@
         </div>
         
 		<div class="item-3">
-			<a href="portfolio/travel/index.html"><img src="assets/img/project-travel.jpg" class="image-shadow" alt="Project: Travel Agency"></a>
-			<h3><a href="portfolio/travel/index.html" class="fancy-link">IBAT Tours</a></h3>
+			<a href="https://eimeark2204.github.io/portfolio/travel/"><img src="assets/img/project-travel.jpg" class="image-shadow" alt="Project: Travel Agency"></a>
+			<h3><a href="https://eimeark2204.github.io/portfolio/travel/" class="fancy-link">IBAT Tours</a></h3>
             <p>Need a holiday? IBAT Tours provides happy holiday experiences at affordable prices.</p>
-            <a href="portfolio/travel/index.html" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>               
+            <a href="https://eimeark2204.github.io/portfolio/travel/" class="button button-solid">View Project &nbsp;<i class="fas fa-arrow-right"></i></a>               
 		</div>
 
 	</div><!-- End parent flexbox container -->
