--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact/index.html" class="btn-cta">Contact<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="/contact/index.html" class="btn-cta">Contact<i class="fas fa-arrow-right"></i></a></li>
         </ul>
 
         <hr>
@@ -99,7 +99,7 @@
         <div class="item-2 slide-in-left">
             <h1>Welcome to my website</h1>
             <h2>Hi, I'm <b>Eimear Keogh</b>. I create digital experiences to promote products, services and events.</h2>
-            <a href="https://eimeark2204.github.io/contact/index.html" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
+            <a href="contact/index.html" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="item-2">
             <img src="assets/img/hero-undraw-home.png" alt="hero image">
