--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,7 +99,7 @@
         <div class="item-2 slide-in-left">
             <h1>Welcome to my work</h1>
             <h2>I use <b>HTML</b> and <b>CSS</b> with <b>graphic design</b> and <b>animation</b> to bring your ideas to life.</h2>
-            <a href="contact/index.html" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
+            <a href="../contact/index.html" class="button button-solid">Get in touch &nbsp;<i class="fas fa-arrow-right"></i></a>
         </div>
         <div class="item-2">
             <img src="../assets/img/hero-undraw-portfolio.png" alt="hero image">
