--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Begin mobile menu bar -->
     <div class="container-menu-bar-mobile menu-light menu-sticky">
             <!-- first child -->
-            <a href="index.html"><img src="assets/img/website-logo.png"alt="website logo"></a>
+            <a href="index.html"><img src="assets/img/website-logo.png" alt="website logo"></a>
             <!-- second child -->
             <div class="item-icon">
                 <div class="bar1"></div>
@@ -72,7 +72,7 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-            <img src="assets/img/profile-pic.png" alt="Eimear Keogh, web designer, Dublin">
+            <img src="assets/img/profile-pic.PNG" alt="Eimear Keogh, web designer, Dublin">
             <p>Hi, I'm <b>Eimear Keogh</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
