--- a/portfolio/how-to-set-up-a-website/index.html
+++ b/portfolio/how-to-set-up-a-website/index.html
@@ -17,8 +17,6 @@
 	<!-- Link to stylesheet for Cookie Consent Popup Message -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 	
-	<!-- Link to icons for Font Awesome 5 -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159155048-1"></script>
@@ -197,7 +195,7 @@
 			<h4>Contact</h4>
 			<p><i class="fas fa-envelope fa-fw"></i><a href="mailto:eimearkeogh@hotmail.com">Email</a></p>
 			<p><i class="fab fa-github-square fa-fw"></i><a href="https://www.github.com/eimeark2204" target="_blank">GitHub</a></p>
-			<p><i class="fab fa-linkedin fa-fw"></i><a href="https://ie.linkedin.com" target="_blank">Linkedin</a></p>
+			<p><i class="fab fa-linkedin fa-fw"></i><a href="https://ie.linkedin.com/in/eimear-keogh-06a476187" target="_blank">Linkedin</a></p>
 		</div>
 		
 	</div>
