--- a/portfolio/software/index.html
+++ b/portfolio/software/index.html
@@ -35,6 +35,70 @@
 
 
 <body>
+	<!-- Begin desktop menu -->
+    <div class="container-menu-desktop menu-dark menu-sticky">
+        <!-- first child item -->
+        <a href="#"><img src="assets/img/software-logo.png" alt="website logo"></a>
+        <!-- second child item -->
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#benefits">Benefits</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#free-trial" class="btn-cta">Start Your Free Trial</a></li>
+        </ul>
+    </div>
+    <!-- End desktop menu -->
+
+
+    <!-- Begin mobile menu bar -->
+    <div class="container-menu-bar-mobile menu-dark menu-sticky">
+            <!-- first child -->
+            <a href="#"><img src="assets/img/software-logo.png" alt="website logo"></a>
+            <!-- second child -->
+            <div class="item-icon">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </div>
+    <!-- End mobile menu bar -->
+
+    <!-- Begin mobile menu slide-out options -->
+    <div class="flyout-menu flyout-menu-is-closed menu-dark">
+        <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#benefits">Benefits</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#free-trial" class="btn-cta">Free Trial</a></li>
+        </ul>
+
+        <hr>
+        <h4>About Me</h4>
+        <div class="fly-out-profile-box">
+			<img src="../../assets/img/profile-pic.PNG" alt="Eimear Keogh web designer, Dublin Ireland">
+            <p>Hi, I'm <b>Mary Smith</b>, a web and digital designer based in Dublin, Ireland.</p>
+        </div>
+   
+        <h4>Contact</h4>
+        <p>Have a project you'd like to discuss? Let's make something great together!</p>
+
+        <h5><a href="tel:0876644886">087 664 4886</a></h5>
+
+        <h5><a href="mailto:eimear@gmail.com" target="_blank">eimeark85@gmail.com</a></h5>
+
+        <h4>Social Links</h4>
+        <div class="fly-out-social-icons">
+            <a href="https://www.github.com/eimeark2204" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
+            <a href="https://ie.linkedin.com/in/eimear-keogh-06a476187" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
+            <a href="https://www.instagram.com/yoyo8512/" target="_blank"><i class="fab fa-instagram"></i></a>
+            
+        </div>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+    </div>
+    <!-- End mobile menu slide-out options -->
+
 
 	<!-- Begin hero block -->
 	<div class="container-flexbox hero-block">
@@ -61,7 +125,7 @@
 	
 
 	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
-	<div class="container-flexbox bg-light-gray">
+	<div class="container-flexbox bg-light-gray" id="features">
 		<div class="item-1">
 			<h2>What we offer</h2>
 			<p>Say 'Hello' to a simple yet powerful user analytics system. IBAT Analytics tells you all you need to know about your website traffic, without tracking or storing your visitors' personal information. </p>
@@ -95,7 +159,7 @@
 	
 	
 	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
-	<div class="container-flexbox bg-light-gray">
+	<div class="container-flexbox bg-light-gray" id="benefits">
 		<div class="item-1">
 			<h2>How you benefit</h2>
 			<p>IBAT Analytics helps you focus on what's important: your business.</p>
@@ -137,7 +201,7 @@
 	
 
 	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
-	<div class="container-flexbox bg-light-gray">
+	<div class="container-flexbox bg-light-gray" id="testimonials">
 		<div class="item item-1">
 			<h2>Happy users</h2>
 			<p>Join the 1,000s of delighted customers from every sector of business around the world who are using IBAT Analytics to drive their future success.</p>
@@ -191,8 +255,115 @@
         <!-- Form ends here -->
     </div>
 	<!-- End container for email signup form -->
-	<!-- =============== END EMAIL SIGN UP FORM HTML ============= -->
 	
+
+	<!-- Begin HTML footer -->
+
+	<div class="container-footer">
+
+		<div class="item-3">
+
+			<h4>Site Map</h4>
+			<p><i class="fas fa-home fa-fw"></i><a href="../../index.html">Home</a></p>
+			<p><i class="fas fa-file-alt fa-fw"></i><a href="../index.html">Portfolio</a></p>
+			<p><i class="fas fa-lock fa-fw"></i><a href="../../privacy.html">Privacy</a></p>
+		
+		</div>
+
+		<div class="item-3">
+			<h4>About Me</h4>
+			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
+			
+			<p>I created this sample web page to showcase some of my digital creation skills.</p>
+		</div>
+
+		<div class="item-3">
+			<h4>Contact</h4>
+			<p><i class="fas fa-envelope fa-fw"></i><a href="mailto:eimeark85@gmail.com">Email</a></p>
+			<p><i class="fab fa-github-square fa-fw"></i><a href="https://www.github.com/eimeark2204" target="_blank">GitHub</a></p>
+			<p><i class="fab fa-linkedin fa-fw"></i><a href="https://ie.linkedin.com/in/eimear-keogh-06a476187" target="_blank">Linkedin</a></p>
+		</div>
+		
+	</div>
+	
+	<!-- End HTML footer -->
+
+<!-- Begin JavaScript code for desktop and mobile menus -->
+<script>
+
+	// Code to detect click of option within fly-out menu
+	let specifiedElement = document.querySelector('.flyout-menu');
+	document.addEventListener('click', function(event) {
+		var isClickInside = specifiedElement.contains(event.target);
+		//If link is within current web page
+		if (isClickInside) {
+			//Get id of anchor
+			let anchor_id = window.location.hash;
+			//Add extra spacing above anchor
+			let elemAnchor = document.querySelector(anchor_id)
+			elemAnchor.classList.add('sticky-anchor');
+			//Close fly-out menu
+			toggleMobileMenu();
+		}
+		else {
+			return;
+		}
+	});
+
+	// Code to show/hide fly-out mobile menu -->
+	document.querySelector('.item-icon').addEventListener('click', toggleMobileMenu)
+	const pageContainer = document.querySelector('.page-container');
+
+	function toggleMobileMenu() {
+		//toggle hamburger icon
+		const elemIcon = document.querySelector('.item-icon');
+		elemIcon.classList.toggle("change");
+		const elemHTML = document.querySelector('html');
+		const elemBody = document.querySelector('body');            
+		const elemFlyOut = document.querySelector('.flyout-menu');
+
+		//if fly-out menu is currently closed, open it.
+		if (elemIcon.classList.contains('change')) {
+			elemFlyOut.classList.remove('flyout-menu-is-closed');
+			elemFlyOut.classList.add('flyout-menu-is-open');
+			elemHTML.classList.add('no-scroll');
+			elemBody.classList.add('no-scroll');
+		}    
+		//if fly-out menu is currently open, close it.
+		else {
+			elemFlyOut.classList.remove('flyout-menu-is-open');
+			elemFlyOut.classList.add('flyout-menu-is-closed');
+			elemHTML.classList.remove('no-scroll');
+			elemBody.classList.remove('no-scroll');                                
+		}
+	}
+
+	// Code for menus with transparent background
+	window.onscroll = function() {swapMenuStyle()};
+	const headerDesktop = document.querySelector('.container-menu-desktop');
+	const headerMobile = document.querySelector('.container-menu-bar-mobile');
+
+	const stickyDesktop = headerDesktop.offsetTop +300;
+	const stickyMobile = headerDesktop.offsetTop  +300;
+
+	function swapMenuStyle() {
+		if (window.pageYOffset > stickyDesktop) {
+			headerDesktop.classList.add("menu-light","menu-drop-shadow");
+			headerDesktop.classList.remove("menu-dark");
+			headerMobile.classList.add("menu-light","menu-drop-shadow");
+			headerMobile.classList.remove("menu-dark");
+
+		} else {
+			headerDesktop.classList.add("menu-dark");
+			headerDesktop.classList.remove("menu-light","menu-drop-shadow");
+			headerMobile.classList.add("menu-dark");
+			headerMobile.classList.remove("menu-light","menu-drop-shadow");
+		}
+	}
+
+</script>
+<!-- End JavaScript code for desktop and mobile menus -->
+
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
 	<script>
