--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="assets/css/global.css" rel="stylesheet">
 
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
 	<!-- Link to icons for Font Awesome 5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -72,7 +72,7 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-            <img src="assets/img/profile-pic.PNG" alt="Eimear Keogh, web designer, Dublin">
+            <img src=".../assets/img/profile-pic.PNG" alt="Eimear Keogh, web designer, Dublin">
             <p>Hi, I'm <b>Eimear Keogh</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
