--- a/portfolio/software/index.html
+++ b/portfolio/software/index.html
@@ -75,8 +75,8 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-			<img src="../../assets/img/profile-pic.PNG" alt="Eimear Keogh web designer, Dublin Ireland">
-            <p>Hi, I'm <b>Mary Smith</b>, a web and digital designer based in Dublin, Ireland.</p>
+			<img src="../../assets/img/profile-pic.jpg" alt="Eimear Keogh web designer, Dublin Ireland">
+            <p>Hi, I'm <b>Eimear Keogh</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
         <h4>Contact</h4>
