--- a/portfolio/travel/destinations.html
+++ b/portfolio/travel/destinations.html
@@ -75,7 +75,7 @@
 		<hr>
 		<h4>About Me</h4>
 		<div class="fly-out-profile-box">
-			<img src="../../assets/img/profile-pic.PNG" alt="Eimear Keogh web designer, Dublin">
+			<img src="../../assets/img/profile-pic.jpg" alt="Eimear Keogh web designer, Dublin">
 			<p>Hi, I'm <b>Eimear Keogh</b>, a web and digital designer based in Dublin, Ireland.</p>
 		</div>
    
