--- a/portfolio/web-agency/contact.html
+++ b/portfolio/web-agency/contact.html
@@ -74,7 +74,7 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-            <img src="../../assets/img/profile-pic.PNG" alt="Eimear Keogh web designer, Dublin">
+            <img src="../../assets/img/profile-pic.jpg" alt="Eimear Keogh web designer, Dublin">
             <p>Hi, I'm <b>Mary Smith</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
