--- a/privacy.html
+++ b/privacy.html
@@ -90,8 +90,12 @@
         <a href="https://www.instagram.com/yoyo8512/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.facebook.com/eimear.keogh.7/" target="_blank"><i class="fab fa-facebook-square"></i></a>
     </div>
-    
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
 </div>
+    
 <!-- End mobile menu slide-out options -->
 
     <div class="container-one-column unhide-content-under-sticky-menu">
