--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -84,13 +84,18 @@
     <h5><a href="mailto:eimeark85@gmail.com" target="_blank">eimeark85@gmail.com</a></h5>
 
     <h4>Social Links</h4>
-    <div class="fly-out-social-icons">
-        <a href="https://ie.linkedin.com/in/eimear-keogh-06a476187" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
-        <a href="https://www.instagram.com/yoyo8512/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/eimear.keogh1/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-    </div>
+        <div class="fly-out-social-icons">
+            
+            <a href="https://ie.linkedin.com/in/eimear-keogh-06a476187" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
+            <a href="https://www.instagram.com/yoyo8512/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/eimear.keogh.7/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+        </div>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+
+     </div>
     
-</div>
 <!-- End mobile menu slide-out options -->
 
      <!-- Begin hero block -->
